# aw-import-screentime

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/aw_import_screentime/: __main__.py  app_in_focus_extended.proto  app_in_focus_extended_pb2.py  macos.py  macos_knowledgec.py
